--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "scripts": {
     "i18n": "rm -rf build/messages && NODE_ENV=production i18n --addon"
   },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
   "devDependencies": {
     "@plone/scripts": "*"
   }
