docs: added readme and dependencies for changelog generation

--- a/package.json
+++ b/package.json
@@ -8,16 +8,28 @@
     "volto-addon",
     "volto",
     "plone",
-    "react"
+    "react",
+    "newsletter"
   ],
   "scripts": {
     "i18n": "rm -rf build/messages && NODE_ENV=production i18n --addon"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
   },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all"
   },
   "devDependencies": {
-    "@plone/scripts": "*"
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@plone/scripts": "*",
+    "@release-it/conventional-changelog": "^2.0.1",
+    "husky": "^6.0.0",
+    "release-it": "^14.10.1"
   }
 }
