--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "volto-newsletter",
+  "name": "@redturtle/volto-newsletter",
   "version": "0.1.0",
   "description": "volto-newsletter: Volto add-on",
   "main": "src/index.js",
