--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react",
     "newsletter"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "i18n": "rm -rf build/messages && NODE_ENV=production i18n --addon"
   },
