--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "newsletter"
   ],
   "scripts": {
-    "i18n": "rm -rf build/messages && NODE_ENV=production i18n --addon"
+    "i18n": "rm -rf build/messages && NODE_ENV=production i18n --addon",
+    "release": "release-it"
   },
   "husky": {
     "hooks": {
