--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "react",
     "newsletter"
   ],
-  "scripts": {
+ "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+ "scripts": {
     "i18n": "rm -rf build/messages && NODE_ENV=production i18n --addon",
     "release": "release-it"
   },
